# Model-Deployment

./: pyproject.toml  requirements.txt
Assignments/Spaceship_Titanic/: app_streamlit.py  data_ingestion.py  evaluation.py  pipeline.py  pre_processing.py  train.py
Assignments/Spaceship_Titanic_Cloud/: deploy_endpoint.py  pipeline.py  streamlit_app.py  user-data.sh
Assignments/Spaceship_Titanic_Proper_Pipeline/: main_pipeline.py  mlflow.db
Session 4 Iris/: app_streamlit.py  data_ingestion.py  evaluation.py  pipeline.py  train.py
Session 5 Churn/: main_manual.py
Session_4_Iris/: pipeline.py  pre_processing.py  requirements.txt
Session_5_Churn/: main_pipeline.py
UAS/: mlflow.db  requirements.txt
UTS/: main_pipeline.py  mlflow.db  pyproject.toml
UTS/apps/: B_fastapi.py  app_pipeline.py  app_streamlit.py
UTS/artifacts/: placement_classifier.pkl  salary_regressor.pkl
UTS/config/: config.py  config.toml
UTS/mlruns/1/models/m-1a3b063d044146a9a2192008422e65ac/artifacts/: MLmodel  model.pkl
UTS/mlruns/1/models/m-5e99efb3f43f45a3a06c9b2534ec64c8/artifacts/: MLmodel  model.pkl  python_env.yaml
UTS/mlruns/2/models/m-b0cb9610c374444c8dcddd205537c5b7/artifacts/: MLmodel  model.pkl
UTS/mlruns/2/models/m-d35f5c6b51294b81b73e648cf05b6691/artifacts/: MLmodel  conda.yaml
UTS/notebook/: EDA.ipynb
UTS/src/: main_pipeline.py
UTS/src/data/: loader.py
UTS/src/features/: pipeline_preprocessor.py
UTS/src/models/: evaluate.py  train.py
UTS/src/pipelines/: sklearn_pipeline.py
UTS/src/utils/: io.py
apps/: app_pipeline.py
config/: config.py
(+69 files in other folders)
