[project]
name            = "uts-student-placement"
version         = "1.0.0"
description     = "Student Placement & Salary Prediction – Classification + Regression Pipeline"
requires-python = ">=3.11"

dependencies = [

    # ── Core Data Science
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",

    # ── Machine Learning
    "scikit-learn",
    "joblib",

    # ── Hyperparameter Optimization
    "optuna",

    # ── Experiment Tracking & Model Registry
    "mlflow",

    # ── API Serving
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",

    # ── Web UI
    "streamlit>=1.41",

    # ── Jupyter
    "jupyter",
    "ipywidgets"
]

[project.scripts]
train = "src.main_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
